# websweeper

./: .gitignore  Cargo.toml  conf.json.sample
assets/: client.js  explosion.opus  index.html  room.html  style.css
src/: conn.rs  ircbot.rs  livepos.rs  main.rs  minesweeper.rs  types.rs
