[package]
name = "websweeper"
version = "1.1.0"
authors = ["stale <stale@masba.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
warp = { version = "0.3", features = ["tls", "websocket"] }
rand = "0.8"
futures = "0.3"
ammonia = "3"
